// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VirtualList visual regression > empty list matches snapshot 1`] = `
<div>
  <div
    style="height: 200px;"
  >
    <div
      class="overflow-auto"
      style="contain: strict;"
    >
      <div
        style="height: 0px; width: 100%; position: relative;"
      />
    </div>
  </div>
</div>
`;

exports[`VirtualList visual regression > multi-column grid matches snapshot 1`] = `
<div>
  <div
    style="height: 300px;"
  >
    <div
      class="overflow-auto"
      style="contain: strict;"
    >
      <div
        style="height: 200px; width: 100%; position: relative;"
      />
    </div>
  </div>
</div>
`;

exports[`VirtualList visual regression > single-column list matches snapshot 1`] = `
<div>
  <div
    style="height: 300px;"
  >
    <div
      class="overflow-auto"
      style="contain: strict;"
    >
      <div
        style="height: 250px; width: 100%; position: relative;"
      />
    </div>
  </div>
</div>
`;
